IT COMPILES (still broken)
Most of LiteModSynapse was commented out to be fixed and relocated at a
later time. Likewise, ALL of the gui code has been removed in
antici...........pation of a refactor to YACL.